Exercise2_07/manifests/service.yaml
apiVersion: v1 # Includes the Service for lazyness
kind: Service
metadata:
  name: pingpersistent-svc
  labels:
    app: pingpersistent
spec:
  selector:
    app: ppp
  type: ClusterIP
  ports:
  - port: 5432
    name: postgres-port
  - port: 8080
    name: dbtool-port
  - port: 8081
    name: pingpong-port
